--- a/packages/commons/pubspec.yaml
+++ b/packages/commons/pubspec.yaml
@@ -1,15 +1,20 @@
 name: commons
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+publish_to: 'none'
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
+  dio: ^5.0.1
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
+
+  das:
+    path: "../das"
 
 dev_dependencies:
   flutter_test:
