--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
 
+  # personnal packages
+  commons:
+    path: packages/commons
+  das:
+    path: packages/das
+  equatable: ^2.0.5
+  json_annotation: ^4.8.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
