--- a/packages/commons/pubspec.yaml
+++ b/packages/commons/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
 
   das:
     path: "../das"
+  logger: ^1.2.2
+  google_fonts: ^4.0.3
+  flutter_screenutil: ^5.6.1
+  bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
