--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
     path: packages/das
   equatable: ^2.0.5
   json_annotation: ^4.8.0
+  flutter_svg: ^2.0.2
+  logger: ^1.2.2
+  flutter_screenutil: ^5.6.1
 
 
 dev_dependencies:
@@ -71,9 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
